src/objects/ArtistAgency__c.object
<CustomObject>
    <description>Junction object linking artists with agencies, enabling an artist to be represented by multiple agencies</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>RepresentedArtists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>RepresentedArtists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Artist__c</fullName>
        <label>Artist</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Artist-Agencies (Artist)</relationshipLabel>
        <relationshipName>ArtistAgencies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>PrimaryAgency__c</fullName>
        <description>Indicates whether the agency defined is the same as the artists primary agency. If so this field is checked, if not field is unchecked</description>
        <formula>IF(Artist__r.PrimaryAgency__c = Agency__c, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Agency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SourceSystemId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SourceSystemId</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Artist-Agency</label>
    <nameField>
        <displayFormat>AA-{000000}</displayFormat>
        <label>Artist Agency ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Artist-Agencies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>